--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,14 @@
 <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>berserk:: {% block title %}home{% endblock %}</title>
-        <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}stylesheets/screen.css" media="screen">
+
+        <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}flexigrid/css/screen.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}berserk/css/screen.css" media="screen">
+
+	<script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.js" charset="utf-8"></script>
+	<script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.flot.js" charset="utf-8"></script>
+	<script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/excanvas.js" charset="utf-8"></script>
+	<script type="text/javascript" src="{{ MEDIA_URL }}flexigrid/js/flexigrid.js" charset="utf-8"></script>
 </head>
 
 <body>
