Hacking and frustration

--- a/site_media/berserk/css/screen.css
+++ b/site_media/berserk/css/screen.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    background: #182433;
+    background: #FFFFFF;
     font: 10pt Verdana, Arial, Helvetica, sans-serif;
 }
 
@@ -27,53 +27,11 @@ h2 {
     text-transform: lowercase;
 }
 
-ul.errorlist {
-    margin: 0;
-    padding: 0 0 0 5px;
-    background: #FCE398;
-}
-
-ul.errorlist li {
-    margin: 0;
-    padding: 5px;
-
-    color: #520520;
-
-    background: url('../images/error.png') center left no-repeat;
-    padding-left: 19px;
-    list-style: none;
-}
-
 #content-container {
-    width: 80%;
-    min-width: 600px;
-    margin: 0 auto;
-    display: table;
+    margin: 20px 60px;
 }
 
-.content-row {
-    display: table-row;
-}
-
-.left-shadow {
-    display: table-cell;
-    width: 47px;
-    height: 100%;
-    background: url('../images/left-shadow.png') top right repeat-y;
-}
-
-.right-shadow {
-    display: table-cell;
-    width: 47px;
-    height: 100%;
-    background: url('../images/right-shadow.png') top left repeat-y;
-}
-
-.middle, #content {
-    display: table-cell;
-}
-
-.middle {
+#user-details {
     color: #ffffff;
     text-align: right;
     background: #3ca2a2;
@@ -82,49 +40,47 @@ ul.errorlist li {
     border-top: 2px solid #dfecf6;
 }
 
-.middle p {
+#user-details p {
     margin: 2px;
 }
 
-.middle a:link, .middle a {
+#user-details a:link, #user-details a {
     color: #215a5a;
 }
 
 #content {
-    background: #2d2d29;
+    background: #f0f0f0;
 }
 
 #header {
     border-bottom: 8px solid #215a6d;
+    text-align: center;
+    background: #2c2c2c url('../images/header-bg.png') center center no-repeat;
 }
 
 #logo {
     padding: 10px;
     padding-bottom: 5px;
-    float: left;
+    position: absolute;
 }
 
-#navigation {
-    font: bold 1.4em Arial, Helvetica, sans-serif;
-    margin-bottom: 5px; 
-    text-transform: lowercase;
-    text-align: right;
+#sprint-burndown-chart {
+    text-align: center;
+    float: center;
 }
 
-.nav-item {
-    padding-right: 15px;
+.clear {
+    clear: both;
+}
+
+#graph p {
+    font-weight: bold;
+    color: #ffffff;
 }
 
 #body {
     background: #dfecf6;
-    padding: 10px;
-}
-
-div#sprint-tasks-table, div#sprint-effort-table, div#sprint-load-table {
-    width: 100%;
-    text-align: left;
-    border-collapse: collapse;
-    padding: 10px;
+    padding: 15px;
 }
 
 #footer {
@@ -133,14 +89,4 @@ div#sprint-tasks-table, div#sprint-effort-table, div#sprint-load-table {
     background-color: #215a6d;
     color: #dfecf6;
     font-size: 0.8em;
-}
-
-#footer-left {
-    padding: 20px;
-    float: left;
-}
-
-#footer-right {
-    padding: 5px;
-    float: right;
 }
