--- a/templates/base.html
+++ b/templates/base.html
@@ -16,58 +16,42 @@
 </head>
 
 <body>
-    <div id="content-container">
-        <div class="content-row">
-            <div class="left-shadow"></div>
-            <div class="middle">
+<div id="content-container">
+    <div id="user-details">
 {% if user.is_authenticated %}
-                <p>welcome back, {{ user.first_name }}.  &nbsp;[change password / log out]</p>
-{% else %}
-                <p>hello stranger.  care to <a href="{% url django.contrib.auth.views.login %}">log in</a>?
 {% endif %}
+    </div>
+    <div id="content">
+        <div id="header">
+            <div id="logo">
+                <a href="/"><img src="{{ MEDIA_URL }}images/berserk-logo.gif" width="145" height="38" alt="Berserk Logo" /></a>
             </div>
-            <div class="right-shadow"></div>
-        </div>
-        <div class="content-row">
-            <div class="left-shadow"></div>
-            <div id="content">
-                <div id="header">
-                    <div id="logo">
-                        <a href="/"><img src="{{ MEDIA_URL }}images/berserk-logo.gif" width="145" height="38" alt="Berserk Logo" /></a>
-                    </div>
-                    <div style="clear: both;"></div>
 {% block header %}
 {% endblock %}
-                </div>
-                <div id="body">
+        </div>
+        <div id="body">
 {% block navigation %}
 {% endblock %}
 {% block body %}
 {% endblock %}
-                </div>
-                <div id="footer">
-                    <div id="footer-left">
+        </div>
+        <div id="footer">
+            <table cellspacing="0" cellpadding="0">
+                <tr>
+                    <td>
 Copyright &copy; 2008 Brad Taylor.<br />
 Berserk is committed to sparkle motion.<br />
 Berserk is also free software.
-                    </div>
-                    <div id="footer-right">
-                        <a href="http://djangopony.com/"><img
-                           src="{{ MEDIA_URL }}images/pony-powered.png" width="210" height="65"
-                           alt="Berserk is Pony Powered!" /></a>
-                    </div>
-                    <div style="clear: both"></div>
-                </div>
-            </div>
-            <div class="right-shadow"></div>
+                    </td>
+                    <td>
+<a href="http://djangopony.com/"><img
+   src="{{ MEDIA_URL }}images/pony-powered.png" width="210" height="65"
+   alt="Berserk is Pony Powered!" /></a>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
-</body>
-</html>
-
-
-
-
-            </div>
+</div>
 </body>
 </html>
