--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -9,7 +9,7 @@
 <h3>{{ title }}</h3>
 <p>{% blocktrans %}You have been successfully logged out.  You're coming back, right?{% endblocktrans %}</p>
 <p>
-<a href="{% url django.contrib.auth.views.login %}">Log in again</a>
+<a href="{% url django.contrib.auth.views.login %}">{% trans "Log in again" %}</a>
 </p>
 {% endblock %}
 
