--- a/sprints/templates/sprints/base.html
+++ b/sprints/templates/sprints/base.html
@@ -37,6 +37,8 @@
 {% block extra_body %}
 <script type="text/javascript">
 Ext.onReady(function() {
+    {% block js_onReady %}
+    {% endblock %}
     $.getJSON('{% url sprints.views.sprint_burndown_json sprint.id %}',
         function(json) {
             var markings = [];
@@ -47,6 +49,7 @@ Ext.onReady(function() {
                         from: w.start,
                         to: w.end,
                     },
+                    yaxis: { from: 0 },
                     color: "#fff6d9",
                 });
             }
@@ -58,8 +61,6 @@ Ext.onReady(function() {
             });
         }
     );
-    {% block js_onReady %}
-    {% endblock %}
 });
 </script>
 {% endblock %}
