--- a/site_media/berserk/css/screen.css
+++ b/site_media/berserk/css/screen.css
@@ -105,10 +105,11 @@ img a {
 }
 
 .err {
-    margin: 5px 0;
+    margin: 8px 0;
     padding: 6px;
     background-color: #e1df66;
     display: none;
+    color: #000000;
 }
 
 #footer {
@@ -130,6 +131,15 @@ img a {
 }
 
 /* Page-specific styles */
+#old-sprint-notice {
+    margin: 8px 0;
+    padding: 6px;
+    background-color: #ebf3fd;
+    border: 1px solid #a1c0e6;
+    color: #000000;
+    display: none;
+}
+
 #sprint-burndown-chart {
     width: 800px;
     height: 400px;
