--- a/sprints/templates/sprints/sprint_edit.html
+++ b/sprints/templates/sprints/sprint_edit.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 
+{% block title %}editing sprint {{ sprint }}{% endblock %}
+
 {% block nav-your-tasks %} selected{% endblock %}
 
 {% block body %}
