--- a/sprints/templates/sprints/base.html
+++ b/sprints/templates/sprints/base.html
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/sprint_detail.js" defer="defer" charset="utf-8"></script>
 {% endblock %}
 
+{% block title %}viewing sprint {{ sprint }}{% endblock %}
+
 {% block navigation %}
 <span class="navigation-item{% block nav-team-tasks %}{% endblock %}">
 <a href="{% url sprints.views.sprint_detail sprint.id %}">{% trans "Team Tasks" %}</a>
