--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,7 @@
 
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.js" defer="defer" charset="utf-8"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.flot.js" defer="defer" charset="utf-8"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}ext/js/ext-jquery-adapter.js" defer="defer" charset="utf-8"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}ext/js/ext-all.js" defer="defer" charset="utf-8"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}ext/js/ext.js" defer="defer" charset="utf-8"></script>
 {% block extra_head %}
 {% endblock %}
 </head>
