Add a pretty favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>berserk:: {% block title %}home{% endblock %}</title>
 
+    <link rel="icon" type="image/png" href="{{ MEDIA_URL }}berserk/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}berserk/css/screen.css" media="screen">
 
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.js" defer="defer" charset="utf-8"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.flot.js" defer="defer" charset="utf-8"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ext/js/ext.js" defer="defer" charset="utf-8"></script>
+
 {% block extra_head %}
 {% endblock %}
 </head>
