Slight rewording to bookmarklet description

--- a/sprints/templates/sprints/sprint_edit.html
+++ b/sprints/templates/sprints/sprint_edit.html
@@ -35,7 +35,7 @@
         </a>
 {% blocktrans %}
         <small>Drag this link to your bookmarks bar.  Clicking on this bookmark
-        when visiting a bug will add the bug to the currently active
+        when visiting a bug will add it as a task to the currently active
         sprint.</small>
 {% endblocktrans %}
     </div>
